# controllers/controllers.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 	"time"
 
+	"github.com/Rahmatuldani/assignment2/data/request"
 	"github.com/Rahmatuldani/assignment2/data/response"
 	"github.com/Rahmatuldani/assignment2/models"
 	"github.com/gin-gonic/gin"
@@ -78,6 +79,49 @@ func (m *ControllerStruct) CreateOrder(ctx *gin.Context) {
 }
 
 // Orders godoc
+// @Summary Update order
+// @Schemes
+// @Description Update orders
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Param req body request.UpdateOrderRequest true "Request Body"
+// @Success 200 {object} models.Orders
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 500 {object} response.ErrorResponse
+// @Router /orders/{id} [put]
+func (m *ControllerStruct) UpdateOrder(ctx *gin.Context) {
+	id := ctx.Param("id")
+	aid, err := strconv.ParseUint(id, 10, 64)
+	if err != nil {
+		ctx.JSON(400, response.ErrorResponse{
+			Status: "Bad Request",
+			Message: "Param id required",
+			Error: err.Error()})
+		return
+	}
+
+	var req request.UpdateOrderRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(400, response.ErrorResponse{Error: err.Error()})
+		return
+	}
+	if err := m.validate.Struct(req); err != nil {
+		ctx.JSON(400, response.ErrorResponse{Error: err.Error()})
+		return	
+	}
+	
+	order, err := m.model.Update(uint8(aid), req)
+	if err != nil {
+		ctx.JSON(500, response.ErrorResponse{Error: err.Error()})
+		return
+	}
+	
+	ctx.JSON(200, order)
+}
+
+// Orders godoc
 // @Summary 	Delete order
 // @Schemes
 // @Description Delete order
@@ -90,7 +134,6 @@ func (m *ControllerStruct) CreateOrder(ctx *gin.Context) {
 // @Failure 	500 {object} response.ErrorResponse
 // @Router 		/orders/{id} [delete]
 func (m *ControllerStruct) DeleteOrder(ctx *gin.Context) {
-	fmt.Println("Here2")
 	id := ctx.Param("id")
 	aid, err := strconv.ParseUint(id, 10, 64)
 	if err != nil {
