# docs/swagger.yaml
@@ -51,6 +51,36 @@ definitions:
     - customerName
     - items
     type: object
+  request.UpdateItemRequest:
+    properties:
+      description:
+        type: string
+      itemCode:
+        type: string
+      lineItemId:
+        type: integer
+      quantity:
+        type: integer
+    required:
+    - description
+    - itemCode
+    - lineItemId
+    - quantity
+    type: object
+  request.UpdateOrderRequest:
+    properties:
+      customerName:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/request.UpdateItemRequest'
+        type: array
+      orderedAt:
+        type: string
+    required:
+    - customerName
+    - items
+    type: object
   response.ErrorResponse:
     properties:
       error:
@@ -146,12 +176,46 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/response.WebResponse'
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Delete order
+      tags:
+      - Orders
+    put:
+      consumes:
+      - application/json
+      description: Update orders
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Request Body
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Orders'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Update order
       tags:
       - Orders
 swagger: "2.0"
